--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="post">
+		<label for="name">Name:</label>
+		<input type="text" id="name" required>
+		<br>
+		<label for="email">Email</label>
+		<input type="Email" id="email" required>
+		<br>
+		<label>Gender:</label>
+		<label>Male</label>
+		<input type="radio" required>
+		<label>female</label>
+		<input type="radio" required>
+		<br>
+		<label for="cars">Car Brands</label>
+		<select>
+			<option>Dropdown</option>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		<br>
+		<label for="dop">Date of Purchase(dop)</label>
+		<input type="date" id="dop" required>
+		<br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<br>
+		<button type="submit">Submit Button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
